--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -36,8 +36,16 @@
             <span>{{ form.errors.password }}</span>
         </div>
 
-        <button type="submit" class="btn btn-primary me-2">Submit</button>
-        <button type="reset" class="btn btn-secondary">Reset</button>
+        <div class="grid">
+            <button type="submit" class="btn btn-primary me-2">Submit</button>
+            <button type="reset" class="btn btn-secondary">Reset</button>
+
+        </div>
+
+        <div class="small text-left">
+            <br />
+            <a href="{% url "users:password_reset" %}" class="text-center"><i>Forgot Password?</i></a>
+        </div>
 
     </form>
 
